--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-responsive-animate-navbar": "^1.1.8",
+    "react-responsive-navbar": "^1.0.11",
     "react-scripts": "5.0.0",
+    "responsive-navbar-react": "^1.2.1",
+    "responsive-react-js-navbar": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
